Add fields to RestartGroup CR
